feat: 新增客户列表

--- a/docker-compose.windows.yml
+++ b/docker-compose.windows.yml
@@ -7,14 +7,13 @@ services:
     container_name: car_service_mongodb
     restart: always
     ports:
-      - "27017:27017"
+      - '27017:27017'
     environment:
       # MongoDB环境变量配置
       MONGO_INITDB_DATABASE: car_service_dev
     volumes:
       # Windows系统下的数据持久化路径
-      - C:/wangliang/data/db:/data/db
+      - E:/dockerData/mongodb:/data/db
       # 初始化脚本
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-
 # 在Windows系统下，不需要显式声明外部卷，直接使用本地路径
