--- a/.env.development
+++ b/.env.development
@@ -11,6 +11,7 @@ HTTPS_PORT=5000
 
 # JWT配置
 JWT_SECRET=dev_jwt_secret_key
+JWT_REFRESH_SECRET=dev_jwt_refresh_secret_key
 JWT_EXPIRES_IN=24h
 
 # 跨域配置
