--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "koa-router": "^13.0.1",
     "mongoose": "^7.0.0",
     "require-directory": "^2.1.1",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "cross-env": "^7.0.3",
-    "nodemon": "^3.1.7",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "@types/jest": "^29.5.11"
+    "nodemon": "^3.1.7",
+    "supertest": "^6.3.3"
   }
 }
